2020-09-27 
	BlcDetalle1 sumatoria por material (día anterior)
	Determinar campos de excel BLC
	Agregar parámetro ZAFRA_VIGENTE
	Agregar Zafra.codigo (int)

2020-09-26 
	Impedir CargarItems en DiaTrabajo cerrado

2020-09-25 
	Renombrar InicioZafra a Zafra
	Eliminar Preferencias

2020-09-24 
	Rediseñar BlcDetalle1
	BlcDetalle1 campo editable
	BLC ingresar datos como StockFabrica

2020-09-23 
	Agregar totales en StockProceso
	Agregar totales en StockProcesoP
	Plantilla para BLC en Datos Día

2020-09-22 
	Ajuste Formulario Caña

2020-09-17 
	Elaboración de project con ajustes finales

2020-08-31 
	StockFabrica: Detalles para totales generales

2020-08-29 
	StockFabrica: Silos Producto Terminado
	StockFabrica: Recibidores de Miel Final - Melaza

2020-08-28 
	StockFabrica: Recibidores de Mieles en las Centrifugas
	StockFabrica: Fundidores
	StockFabrica: Cristaliz Vertical

2020-08-28 
	StockFabrica: Recibidores de Magmas - Planta Baja
	StockFabrica: Alimentadores de la centrifugas

2020-08-27 
	StockFabrica: Recibidores de Magma B y Masas A - B - C
	Cambio de indicador VT(13) por Vt(12)

2020-08-14 
	Indicador.groovy copia de Material

2020-08-13 
	Blc Variables primarias Azúcar Granel
	Blc Variables primarias Cachaza
	Blc Variables primarias Jugo Residual
	Blc Variables primarias Jugo Primera Extracción
	Blc Variables primarias Jugo Claro
	Blc Variables primarias Jugo Diluido
	Ajuste Cto24HTest

2020-08-09 
	Mostrar listado después de Ingenio.save
	class IngenioSaveAction extends ViewBaseAction implements IChainAction, IChangeModeAction{

2020-08-08 
	Reemplazo de Util.instance.toTimestamp(hora, fecha) por SqlUtil.instance.obtenerFecha(hora, diaTrabajoId)

2020-08-07 
	Cambiar tamano hora en instancias de Formulario
	Módulo TurnoTrabajo
	Parametrizar turnos en DisTrabajo

2020-08-06 
	Agregar registros en DescriptionsList	
	Parametro DIA_TRABAJO_UN_REGISTRO (S/N)
	Ajustes en Cto24H
	Modificar Test para escoger secciones
	Parametrizar factor felining y fr